--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,10 @@ name: Build and Test
 on:
   pull_request:
     branches:
-      - v4
+      - deploy
   push:
     branches:
-      - v4
+      - deploy
 
 jobs:
   build-and-test:
